# svgdom

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl
benches/: README.md  load.py  parser.rs
codegen/: Cargo.toml  main.rs
docs/: preprocessor.md
examples/: count_curveto_segments.rs  custom_writer.rs  resave.rs
src/: attribute.rs  attribute_type.rs  attribute_value.rs  attributes.rs  document.rs  dom.rs  element_type.rs  error.rs  lib.rs  name.rs  names.rs  node.rs  parse_options.rs  parser.rs  traits.rs  tree.rs  write.rs  write_options.rs  writer.rs
src/attribute/: attribute.rs  attribute_type.rs  attribute_value.rs  attributes.rs  mod.rs
src/dom/: doc.rs  document.rs  element_type.rs  iterators.rs  mod.rs  node.rs  node_data.rs  node_type.rs  tag_name.rs  tree.rs
src/parser/: css.rs  mod.rs  options.rs  parser.rs  text.rs
src/postproc/: fix_attrs.rs  gradients.rs  macros.rs  mod.rs  resolve_inherit.rs
src/types/: color.rs  length.rs  mod.rs  number.rs  path.rs  points.rs  transform.rs
src/types/path/: builder.rs  mod.rs  parser.rs  path.rs  segment.rs  writer.rs
src/writer/: attrs_order.rs  mod.rs  options.rs  writer.rs
tests/: css.rs  debug.rs  domapi.rs  generator.rs  parser.rs  text.rs  writer.rs
tests/build-tests/parsing/: Cargo.toml  README.md
