[package]
name = "svgdom"
# When updating version, also modify html_root_url in the lib.rs
version = "0.17.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "dom"]
categories = ["parser-implementations"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Library to represent an SVG as a DOM."
repository = "https://github.com/RazrFalcon/svgdom"
documentation = "https://docs.rs/svgdom/"
readme = "README.md"

[badges]
travis-ci = { repository = "RazrFalcon/svgdom" }

[dependencies]
log = "0.4.5"
roxmltree = "0.6"
simplecss = { git = "https://github.com/RazrFalcon/simplecss", rev = "9b5be32" }
siphasher = "0.2.3"
slab = "0.4"
svgtypes = { git = "https://github.com/RazrFalcon/svgtypes", rev = "e2a2a54" }
xmlwriter = { git = "https://github.com/RazrFalcon/xmlwriter", rev = "dac292c" }

[dev-dependencies]
bencher = "0.1"
fern = "0.5"
pretty_assertions = "0.6"
time = "0.1"

[[bench]]
name = "parser"
harness = false

[lib]
path = "src/lib.rs" # for cargo-readme
doctest = true
